# easyUtils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _clang-format  meson.build
demo/: CMakeLists.txt  meson.build  nQueens.cpp  readFile.cpp  readFileByLine.cpp  standardPaths.cpp  textMapTest.cpp  utfNess.cpp  uuid.cpp
include/: readFileAsUTF8.h  standardPaths.h  textMap.h  threadPool.h  utfConvert.h  utfNess.h  uuencode.h  uuid.h
src/: CMakeLists.txt  meson.build  readFileAsUTF8.cpp  standardPaths.cpp  threadPool.cpp  utfConvert.cpp  utfNess.cpp  uuencode.cpp  uuid.cpp
test/: CMakeLists.txt  eightQueens.cpp  meson.build  nQueenSupport.cpp  nQueenSupport.h  textMapTest.cpp  uuencodeTest.cpp
