
nQueensFiles= ['nQueens.cpp']
executable('nQueens',nQueensFiles
    ,dependencies:[easyUtilsDep,threadDep]
)

readFileFiles= ['readFile.cpp']
executable('readFile',readFileFiles
    ,dependencies:easyUtilsDep
)

readFileByLineFiles= ['readFileByLine.cpp']
executable('readFileByLine',readFileByLineFiles
    ,dependencies:easyUtilsDep
)

utfNessFiles= ['utfNess.cpp']
executable('utfNess',utfNessFiles
    ,dependencies:easyUtilsDep
)
