
nQueensFiles= ['nQueens.cpp']
nQueensFiles+= ['../test/nQueenSupport.cpp']
executable('nQueens',nQueensFiles
    ,dependencies:[easyUtilsDep,threadDep]
)

readFileFiles= ['readFile.cpp']
executable('readFile',readFileFiles
    ,dependencies:easyUtilsDep
)

standardPathsFiles= ['standardPaths.cpp']
executable('standardPaths',standardPathsFiles
    ,dependencies:easyUtilsDep
)

readFileByLineFiles= ['readFileByLine.cpp']
executable('readFileByLine',readFileByLineFiles
    ,dependencies:easyUtilsDep
)

utfNessFiles= ['utfNess.cpp']
executable('utfNess',utfNessFiles
    ,dependencies:easyUtilsDep
)

uuidFiles= ['uuid.cpp']
executable('uuid',uuidFiles
    ,dependencies:easyUtilsDep
)

textMapFiles= ['textMapTest.cpp']
executable('textMapTest',textMapFiles
    ,dependencies:easyUtilsDep
)
